repos/makepy/contents/test/fail/Recursive.rules
a: d
    print("A")

b: a
    print("B")

c: a
    print("C")

d: b c
    print("D")
